WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
217163
REGRESSION(
r267763
) [SOUP] Some tests flaky crashing in NetworkSessionSoup::soupSession()
https://bugs.webkit.org/show_bug.cgi?id=217163
Summary
REGRESSION(r267763) [SOUP] Some tests flaky crashing in NetworkSessionSoup::s...
Lauro Moura
Reported
2020-09-30 19:50:57 PDT
Created
attachment 410196
[details]
webrtc/missing-exception-checks-RTCPeerConnection-generateCertificate.html Crash log Some tests affected after
r267763
fast/mediastream/RTCPeerConnection-media-setup-single-dialog.html fast/mediastream/RTCPeerConnection-media-setup-two-dialogs.html webrtc/missing-exception-checks-RTCPeerConnection-generateCertificate.html fast/mediastream/RTCPeerConnection-overloaded-operations.html Regarding this last one, I could not reproduce it locally and the bots aren't generating the crash dump like the others. Snippet of the trace (full one attached): Thread 1 (Thread 0x7fc97a6f79c0 (LWP 2953)): #0 0x00007fc9837868d0 in WebKit::NetworkSessionSoup::soupSession() const () at /app/webkit/WebKitBuild/Release/lib/libwebkit2gtk-4.0.so.37 #1 0x00007fc98540b3d6 in WebCore::DNSResolveQueueSoup::resolve(WTF::String const&, unsigned long, WTF::CompletionHandler<void (std::experimental::fundamentals_v3::expected<WTF::Vector<WebCore::IPAddress, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc>, WebCore::DNSError>&&)>&&) () at /app/webkit/WebKitBuild/Release/lib/libwebkit2gtk-4.0.so.37 #2 0x00007fc9837a571b in WebKit::NetworkRTCProvider::createResolver(WTF::ObjectIdentifier<WebKit::LibWebRTCResolverIdentifierType>, WTF::String&&) () at /app/webkit/WebKitBuild/Release/lib/libwebkit2gtk-4.0.so.37 #3 0x00007fc981128778 in WTF::RunLoop::performWork() () at /app/webkit/WebKitBuild/Release/lib/libjavascriptcoregtk-4.0.so.18 #4 0x00007fc98118ae99 in WTF::RunLoop::RunLoop()::{lambda(void*)#1}::_FUN(void*) () at /app/webkit/WebKitBuild/Release/lib/libjavascriptcoregtk-4.0.so.18 #5 0x00007fc98118b84f in WTF::RunLoop::{lambda(_GSource*, int (*)(void*), void*)#1}::_FUN(_GSource*, int (*)(void*), void*) () at /app/webkit/WebKitBuild/Release/lib/libjavascriptcoregtk-4.0.so.18 #6 0x00007fc97ca7e04f in g_main_dispatch (context=0x562a17a350e0) at ../glib/gmain.c:3325 #7 g_main_context_dispatch (context=0x562a17a350e0) at ../glib/gmain.c:4016 #8 0x00007fc97ca7e3f8 in g_main_context_iterate (context=0x562a17a350e0, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at ../glib/gmain.c:4092 #9 0x00007fc97ca7e713 in g_main_loop_run (loop=0x562a17a36200) at ../glib/gmain.c:4290 #10 0x00007fc98118b998 in WTF::RunLoop::run() () at /app/webkit/WebKitBuild/Release/lib/libjavascriptcoregtk-4.0.so.18 #11 0x00007fc98378996c in WebKit::NetworkProcessMain(int, char**) () at /app/webkit/WebKitBuild/Release/lib/libwebkit2gtk-4.0.so.37 #12 0x00007fc97b610022 in __libc_start_main (main=0x562a15f0ebe0 <main>, argc=3, argv=0x7ffe586a4338, init=<optimized out>, fini=<optimized out>, rtld_fini=<optimized out>, stack_end=0x7ffe586a4328) at ../csu/libc-start.c:308 #13 0x0000562a15f0ec5e in _start () at ../sysdeps/x86_64/start.S:120
Attachments
webrtc/missing-exception-checks-RTCPeerConnection-generateCertificate.html Crash log
(23.02 KB, text/plain)
2020-09-30 19:50 PDT
,
Lauro Moura
no flags
Details
Patch
(26.97 KB, patch)
2020-10-05 01:36 PDT
,
Carlos Garcia Campos
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch
(26.97 KB, patch)
2020-10-05 01:44 PDT
,
Carlos Garcia Campos
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2020-10-01 00:15:44 PDT
I have to fix the DNS resolver.
Lauro Moura
Comment 2
2020-10-02 10:44:57 PDT
For completeness, the test below is also flaky crashing with the same trace (had to check locally, the bot was not generating trace for it). fast/mediastream/RTCPeerConnection-onnegotiationneeded.html
Carlos Garcia Campos
Comment 3
2020-10-05 01:36:31 PDT
Created
attachment 410508
[details]
Patch
Carlos Garcia Campos
Comment 4
2020-10-05 01:44:41 PDT
Created
attachment 410509
[details]
Patch
EWS
Comment 5
2020-10-05 13:24:25 PDT
Committed
r267999
: <
https://trac.webkit.org/changeset/267999
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 410509
[details]
.
Radar WebKit Bug Importer
Comment 6
2020-10-05 13:25:23 PDT
<
rdar://problem/69968509
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug