REGRESSION(r267763) [SOUP] Some tests flaky crashing in NetworkSessionSoup::soupSession() https://bugs.webkit.org/show_bug.cgi?id=217163

Patch by Carlos Garcia Campos <cgarcia@igalia.com> on 2020-10-05
Reviewed by Alex Christensen.

Source/WebCore:

Stop using libsoup for DNS resolver. The libsoup APIs are actually using the GLib networking APIs, and the don't
really use the SoupSession. Rename DNSResolveQueueSoup as DNSResolveQueueGLib and use the GLib API instead.

* PlatformGTK.cmake:
* PlatformWPE.cmake:
* platform/Soup.cmake:
* platform/SourcesGLib.txt:
* platform/SourcesSoup.txt:
* platform/network/DNSResolveQueue.cpp:
* platform/network/glib/DNSResolveQueueGLib.cpp: Added.
(WebCore::didResolveProxy):
(WebCore::proxyResolvedForHttpUriCallback):
(WebCore::proxyResolvedForHttpsUriCallback):
(WebCore::DNSResolveQueueGLib::updateIsUsingProxy):
(WebCore::DNSResolveQueueGLib::platformResolve):
(WebCore::DNSResolveQueueGLib::resolve):
(WebCore::DNSResolveQueueGLib::stopResolve):
* platform/network/glib/DNSResolveQueueGLib.h: Renamed from Source/WebCore/platform/network/soup/DNSResolveQueueSoup.h.
* platform/network/soup/DNSResolveQueueSoup.cpp: Removed.

Source/WebKit:

Remove code to set the SoupSession on DNSResolveQueue.

* NetworkProcess/NetworkProcess.cpp:

LayoutTests:

Remove expectations for tests that should pass now.

* platform/glib/TestExpectations:

Canonical link: https://commits.webkit.org/230102@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@267999 268f45cc-cd09-0410-ab3c-d52691b4dbfc