Source/WebCore/platform/network/DNSResolveQueue.cpp
@@ -27,8 +27,8 @@
 #include "config.h"
 #include "DNSResolveQueue.h"
 
-#if USE(SOUP)
-#include "DNSResolveQueueSoup.h"
+#if USE(GLIB)
+#include "DNSResolveQueueGLib.h"
 #elif USE(CURL)
 #include "DNSResolveQueueCurl.h"
 #elif USE(CF)
