Source/WebCore/platform/network/glib/DNSResolveQueueGLib.h
@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2018 Igalia S.L.
+ * Copyright (C) 2018, 2020 Igalia S.L.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -27,35 +27,43 @@
 
 #include "DNSResolveQueue.h"
 
+#if USE(GLIB)
+
+#include <wtf/CompletionHandler.h>
 #include <wtf/HashMap.h>
 #include <wtf/glib/GRefPtr.h>
 
-typedef struct _SoupSession SoupSession;
-
 namespace WebCore {
 
-class NetworkStorageSession;
-
-class DNSResolveQueueSoup final : public DNSResolveQueue {
+class DNSResolveQueueGLib final : public DNSResolveQueue {
 public:
-    using CompletionAndCancelHandlers = std::pair<WebCore::DNSCompletionHandler, GRefPtr<GCancellable>>;
+    DNSResolveQueueGLib() = default;
 
-    DNSResolveQueueSoup() = default;
-    static void setGlobalDefaultSoupSessionAccessor(Function<SoupSession*()>&&);
     void resolve(const String& hostname, uint64_t identifier, DNSCompletionHandler&&) final;
     void stopResolve(uint64_t identifier) final;
 
-    std::unique_ptr<CompletionAndCancelHandlers> takeCompletionAndCancelHandlers(uint64_t identifier);
-    void removeCancelAndCompletionHandler(uint64_t identifier);
-
 private:
+    struct Request {
+        WTF_MAKE_STRUCT_FAST_ALLOCATED;
+
+        Request(uint64_t identifier, DNSCompletionHandler&& completionHandler)
+            : identifier(identifier)
+            , completionHandler(WTFMove(completionHandler))
+        {
+        }
+
+        uint64_t identifier { 0 };
+        DNSCompletionHandler completionHandler;
+    };
+
     void updateIsUsingProxy() final;
-
-    HashMap<uint64_t, std::unique_ptr<CompletionAndCancelHandlers>> m_completionAndCancelHandlers;
-
     void platformResolve(const String&) final;
+
+    HashMap<uint64_t, GRefPtr<GCancellable>> m_requestCancellables;
 };
 
-using DNSResolveQueuePlatform = DNSResolveQueueSoup;
+using DNSResolveQueuePlatform = DNSResolveQueueGLib;
 
-}
+} // namespace WebCore
+
+#endif // USE(GLIB)
